@@ -100,6 +100,10 @@ Files: txt.pm
 Copyright: Copyright (C) 2008 Gabriel McManus <gmcmanus@gmail.com>
 License: GPL-2+
 
+Files: color.pm
+Copyright: Copyright (C) 2008 Paweł Tęcza <ptecza@net.icm.edu.pl>
+License: GPL-2+
+
 Files: doc/logo/*
 Copyright: © 2006 Recai Oktaş <roktas@debian.org>
 License: GPL-2+
