@@ -348,3 +348,7 @@ legend {
 	background: #eee; 
 	color: black !important;
 }
+
+span.color {
+	padding: 2px;
+}
