@@ -227,3 +227,5 @@ Of course, I'm open for discussion or exchange of ideas :) --[[Paweł|ptecza]]
 	+span.color {
 	+	padding: 2px;
 	+}
+
+[[done]]
