@@ -17,6 +17,7 @@ ikiwiki (2.62) UNRELEASED; urgency=low
   * filecheck: New plugin factoring out the PageSpec additions that were
     originally part of the attachment plugin.
   * edittemplate: Don't wipe out edits on preview.
+  * color: New plugin from ptecza.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 21 Aug 2008 16:20:58 -0400
 
